create ride works through rest controller, bug fixed, refactored some code